Add Dockerfile and start directive.
Create a simple docker container onbuild setup so I can
use an automated build from docker hub.  This is likely a temporary
solution.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "All your docker containers statistics as a stream",
   "main": "stats.js",
   "bind": "stats.js",
+  "scripts": {
+    "start": "./stats.js"
+  },
   "keywords": [
     "docker",
     "container",
